--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -21,14 +21,11 @@
         
 <!--Parallax-->
         <div id="parallax">
-            <div class="paraImgContainer">
-                <img class="paraLayer" id="back" src="images/Triangle_Line.png" />
+            <div class="paraLayer" id="back">
             </div>
-            <div class="paraImgContainer">
-                <img class="paraLayer" id="middle" src="images/X_HalfCircle.png" />
+            <div class="paraLayer" id="middle">
             </div>
-            <div class="paraImgContainer">
-                <img class="paraLayer" id="front" src="images/ZigZag_SmallCircle.png" />
+            <div class="paraLayer" id="front">
             </div>
         </div>
         
